# ezui

./: .gitignore  CMakeLists.txt  README.md  implementation_plan.md  install.sh
cmake/: ezuiConfig.cmake.in
examples/cli_to_gui/: main.cpp
examples/counter/: main.cpp
examples/hello/: main.cpp
include/ezui/: app.h  components.h  console_bridge.h  ezui.h  layout.h  state.h  style.h  types.h
src/: app.cpp  components.cpp  console_bridge.cpp  layout.cpp  state.cpp  style.cpp
